--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html>
 <head>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+    <script src="https://cdn.8thwall.com/web/aframe/8frame-1.0.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
 <a-scene
     vr-mode-ui="enabled: false;"
     loading-screen="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
     id="scene"
     embedded
-    gesture-detector
 >
 <a-assets>
     <a-asset-item
@@ -24,57 +20,37 @@
     ></a-asset-item>
 </a-assets>
 
-<a-marker
-    id="animated-marker"
-    type="pattern"
-    preset="custom"
-    url="assets/marker.patt"
-    raycaster="objects: .clickable"
-    emitevents="true"
-    cursor="fuse: false; rayOrigin: mouse;"
-    id="markerA"
-    marker-status="tracking: true;"
->
 <a-entity
     id="bowser-model"
     scale="0.029413944942555025 0.029413944942555025 0.029413944942555025"
     animation-mixer="loop: repeat"
     gltf-model="#animated-asset"
     class="clickable"
-    gesture-handler
 ></a-entity>
-</a-marker>
-
-<a-entity camera></a-entity>
 
 <script>
-    const marker = document.querySelector("#animated-marker");
+    const xr = document.querySelector('a-scene').systems['xr'];
 
-    marker.addEventListener("markerLost", function () {
-        switchToMarkerlessTracking();
+    xr.addEventListener('reality.started', () => {
+        console.log('Reality started');
+        anchorObjectToPlane();
     });
 
-    function switchToMarkerlessTracking() {
-        if (isMarkerlessTrackingSupported()) {
-            initiateMarkerlessTracking();
-        } else {
-            console.warn("Markerless tracking is not supported on this device.");
-        }
-    }
-
-    function isMarkerlessTrackingSupported() {
-        // Check if WebXR is supported by the browser
-        return 'xr' in navigator;
-    }
-
-    function initiateMarkerlessTracking() {
-        // Request WebXR session
-        navigator.xr.requestSession('immersive-ar').then(function(session) {
-            // Connect AR session to the A-Frame scene
-            document.querySelector('a-scene').setAttribute('xr', { session: session });
-        }).catch(function(error) {
-            console.error('Failed to start WebXR session:', error);
+    function anchorObjectToPlane() {
+        const plane = document.createElement('a-entity');
+        plane.setAttribute('geometry', {
+            primitive: 'plane',
+            width: 1,
+            height: 1
         });
+        plane.setAttribute('material', 'color: #00FF00; transparent: true; opacity: 0.5');
+        plane.setAttribute('position', '0 0 -1'); // Adjust the position as needed
+        plane.setAttribute('rotation', '-90 0 0'); // Adjust the rotation as needed
+        document.querySelector('a-scene').appendChild(plane);
+
+        const bowserModel = document.querySelector('#bowser-model');
+        bowserModel.setAttribute('position', '0 0 0'); // Place the object on the plane
+        plane.appendChild(bowserModel);
     }
 </script>
 
