--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a-marker
             type="pattern"
             preset="custom"
-            url="assets/marker.patt"
+            src="assets/marker.patt"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
